# svelte-up

./: .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
assets/lambda-rs/svelteup-control-plane-rest-api/: Cargo.toml  package.json
assets/lambda-rs/svelteup-control-plane-rest-api/src/: lib.rs  router.rs
assets/lambda-rs/svelteup-github-callback/: Cargo.toml
assets/lambda-rs/svelteup-github-callback/src/: lib.rs
assets/lambda-rs/svelteup-github-webhook/: Cargo.toml  package.json
assets/lambda-rs/svelteup-github-webhook/src/: lib.rs
assets/lambda-rs/svelteup-registration/: Cargo.toml  docker-compose.yml  package.json
assets/lambda-rs/svelteup-registration/src/: lib.rs
