[package]
authors = ["Michael Edelman <mike.edelman@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "svelteup-github-webhook"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.4.1"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.64"
simple_logger = "1.13.0"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
pretty_assertions = "1.0.0"

[profile.release]
codegen-units = 1 # Optimization over all codebase (better optimization, slower build).
lto = true # Link time optimization using using whole-program analysis.
opt-level = 'z' # Optimization for size (or 's' for a less aggressiv alternative).
panic = 'abort' # Less code to include into binary.

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[lib]
name = "lib"
path = "src/lib.rs"
